# kernels

./: .gitignore  Readme.Md
lightx2v_kernel/: CMakeLists.txt  pyproject.toml
lightx2v_kernel/csrc/: common_extension.cc
lightx2v_kernel/csrc/gemm/: mxfp4_quant_kernels_sm120.cu  mxfp4_scaled_mm_kernels_sm120.cu  mxfp6_mxfp8_scaled_mm_kernels_sm120.cu  mxfp6_quant_kernels_sm120.cu  mxfp8_quant_kernels_sm120.cu  mxfp8_scaled_mm_kernels_sm120.cu  nvfp4_quant_kernels_sm120.cu  nvfp4_scaled_mm_kernels_sm120.cu
lightx2v_kernel/include/: utils.h
llama.cpp/: README.md  pyproject.toml  setup.py
llama.cpp/csrc/: gguf_llamacpp_bindings.cpp  gguf_llamacpp_kernels.cu  gguf_llamacpp_ops.h
llama.cpp/src/llamacpp_gguf_cuda/: __init__.py  version.py
