[build-system]
requires = [
  "setuptools>=69",
  "wheel",
  "torch",
]
build-backend = "setuptools.build_meta"

[project]
name = "llamacpp-gguf-cuda"
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.10,<3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: GPU :: NVIDIA CUDA",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
